--- a/src/Calculator.css
+++ b/src/Calculator.css
@@ -1,4 +1,6 @@
 
+
+
 .background-image{
     background-image: url('image/assessor-main.webp');
     width: 100%;
@@ -42,3 +44,8 @@ input{
 input:hover{
     background-color: rgb(251, 56, 35);
 }
+@media (max-width: 600px) {
+    .calci {
+      width: 100%;
+    }
+  }
